Fix issue with styling sentiments on smaller screen as well as the comment header's map

--- a/src/styles/components/_comment_sentiment.scss
+++ b/src/styles/components/_comment_sentiment.scss
@@ -75,3 +75,18 @@ $dsn-sentiment-icons: (
     }
   }
 }
+
+@media (max-width: 389px) {
+  .dsn-sentiment {
+    gap: 0;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (max-width: 300px) {
+  .dsn-sentiment {
+    flex-direction: column;
+    align-items: center;
+  }
+}
